@@ -1,3 +1,10 @@
+2004-03-11  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: SplitOff(N) no longer have to be consecutive (now
+	use all fields matching /splitoff\d*/), but must still be unique.
+	add_splitoff() now returns the PkgVersion objects so that the
+	_splitoffs instance variable is handled in fewer different places.
+
 2004-03-10  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Warn if CVS or RCS directories in a .deb
